css/style.css
:root {
    --acme-font: 'Acme', sans-serif;
    --lora-font: 'Lora', serif;
    --philosopher-font: 'Philosopher', sans-serif;
    --teal: #46a8af;
    --red: #9f221f;
    --light-teal: #a8fcfc;
    --light-red: #ed3933;
    --grey: #162d2f;
    background-color: lightgray;
}

.about-me-text {
   font-family: var(--lora-font);
    font-size: 20px;
    display: flex;
    float: inline;
    margin-right: 250px;
    margin-top: 40px;
    text-align: justify;
    line-height: 30px;
}

footer {
    background-color: var(--teal);
    color: var(--red);
    font-family: var(--acme-font);
    text-align: center;
    font-size: 30px;
    margin-top: 50px;
}

.navbar-item {
    color: var(--light-teal);
    font-weight: bold;
    display: flex;
    margin-left: auto;
    margin-right: auto;
}

#hero {
    background: url(../assets/Portfolio\ Header.jpg) no-repeat center center;
    background-size: cover;
}

.title {
    font-size: 65px;
    font-family: var(--philosopher-font);
    color: var(--teal);
    margin-top: 350px;
    margin-right: 500px;
}

.subtitle {
    font-size: 55px;
    font-family: var(--acme-font);
    color: var(--teal);
    margin-left: 950px;
    margin-top: 350px;
}

.navbar-menu {
    background-color: var(--red);
    display: flex;
    justify-content: space-between;
}

.self-portrait {
    float: right;
    height: 300px;
    width: 172px;
    border: 3px solid var(--red);
}

.card {
    flex: 1 1 auto;
    border: 6px solid var(--red);
    margin-top: 70px;
}

#project-one {
    background: url(../assets/FidoFriendly.png), linear-gradient(rgba(179, 255, 255, 0.5),rgba(237, 57, 51, 0.5));
    background-blend-mode: overlay;
    background-size: cover;
    height: 400px;
}

#project-two {
    background: url(../assets/127.0.0.1_5500_index.html_\ \(1\).png), linear-gradient(rgba(179, 255, 255, 0.5),rgba(237, 57, 51, 0.5));
    background-blend-mode: overlay;
    background-size: cover;
    height: 400px;
}

#project-three {
    background: url(../assets/127.0.0.1_5500_index.html\ \(1\).png), linear-gradient(rgba(179, 255, 255, 0.5),rgba(237, 57, 51, 0.5));
    background-blend-mode: overlay;
    background-size: cover;
    height: 400px;
}

#project-text {
    position: absolute;
    bottom: 40px;
    left: 40px;
    background-color: var(--light-teal);
    color: var(--grey);
    padding: 20px;
}

#project-one:hover {
    background-blend-mode: normal;
}

#project-two:hover {
    background-blend-mode: normal;
}

#project-three:hover {
    background-blend-mode: normal;
}

